# poli_ping

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/migrations/: 20260221172438_init.sql  20260223133408_init_schema.sql  20260310221406_documents.sql
backend/src/: app.rs  lib.rs  main.rs
backend/src/models/: api_models.rs  db_models.rs  dto.rs  mod.rs
backend/src/repository/: mod.rs  motie.rs  vote.rs
backend/src/routes/: mod.rs  moties.rs  votes.rs
backend/src/services/: llm.rs  mod.rs  motie_services.rs
backend/tests/: helpers.rs  test_backend_calls.rs  test_motie_calls.rs
backend/tests/common/: helpers.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: main.css  tailwind.css
frontend/src/: main.rs
frontend/src/components/: mod.rs
frontend/src/components/card/: style.css
frontend/src/components/progress/: style.css
shared/src/: api.rs  lib.rs  motie_dto.rs  vote_dto.rs
src/: main.rs
