[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = "0.8.8"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.44.9", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors"] }
