[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.8.8" }
reqwest = { version = "0.13.2", features = ["json"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.44.9", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors"] }
sqlx = { version="0.9.0-alpha.1",  features = [
    "runtime-tokio",
    "sqlite",
    "macros",
] }
chrono = "0.4.43"
anyhow = "1.0.102"
dotenvy = "0.15.7"
pdf-extract = "0.10.0"
dotenv = "0.15.0"
uuid = { version = "1.22.0", features = ["v4"] }
