[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
dioxus = "0.7.3"
reqwest = { version = "0.13.2", features = ["json"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }